--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <div id="root"></div>
 </body>
 
-<!--<script src="../node_modules/react/dist/react-with-addons.js"></script>
-<script src="../node_modules/react-dom/dist/react-dom.js"></script>-->
+<script src="../node_modules/react/dist/react-with-addons.js"></script>
+<script src="../node_modules/react-dom/dist/react-dom.js"></script>
 <script src="app.js"></script>
 
 </html>
