moved bootstrap to CDN instead of being loading by WebPack to prevent the flash of unstyled content

--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,14 @@
     <meta name="description" content="Plate loading application">
     <meta name="author" content="Dale Alleshouse">
     <title>Load Perfect</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+    crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+"
+    crossorigin="anonymous">
 </head>
 
 <body>
-        <!-- Navigation -->
+    <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -44,10 +48,13 @@
 
     <!-- Page Content -->
     <div class="container">
-
         <!-- Jumbotron Header -->
         <header class="jumbotron hero-spacer">
-            <div id="app"></div>
+            <div id="app">
+                <p class="text-center">
+                    <i class="fa fa-refresh fa-spin fa-5x"></i>
+                </p>
+            </div>
         </header>
 
         <hr>
@@ -62,9 +69,12 @@
         </footer>
 
     </div>
-    
-    
-    <div id="app"></div>
+
+
+    <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="
+    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+    crossorigin="anonymous"></script>
 </body>
 
 <script src="app.js"></script>
